@@ -2,6 +2,7 @@
 Changes for 1.9.8
 
 New features:
+ - [ZBX-4279] added an error message when trying to delete an item, that's being used as a min/max Y axis value for graphs (pavels)
  - [ZBX-3271] implements the _x() and _xn() function for context dependent translations (pavels,Richlv,Vedmak)
  - [ZBX-3498] removed items from unmonitored hosts from the 'Add graph' and 'Add simple graph' pop-ups in the 'Favourite graphs' widget (pavels)
  - [ZBX-3498] removed the 'Status' column from the 'Add simple graph' pop-up (pavels)
